--- a/Backend/src/main/resources/application.yaml
+++ b/Backend/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
-    show-sql: true
+    show-sql: false
     hibernate.ddl-auto: create
     defer-datasource-initialization: true
   sql:
